--- a/web/src/components/Header/Header.module.scss
+++ b/web/src/components/Header/Header.module.scss
@@ -4,9 +4,7 @@
  }
 } 
 .nav-button{
-  background-color: transparent;
-  top: -500px;
-}
-.show{
-  top: 0px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  border: 1px solid #E0E0E0;
 }
