--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -127,9 +127,55 @@
 .testimonials {
     background-image: url('../../images/bootcamp/testimonials-bg.jpg');
     background-size: cover;
-    
 }
 
+
+.video-title{
+    font-size: 32px;
+    text-transform: uppercase;
+    /* float: right; */
+    font-weight: 900;
+    color: #323333;
+    line-height: 50px;
+    margin-top: 0px;
+}
+.video-thumbnail{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+.video-filter {
+    filter: opacity(0.5);
+    max-width: 100%;
+    height: auto;
+    /* margin: auto; */
+}
+.play-icon {
+    cursor: pointer;
+    position: absolute;
+    text-align: center;
+    background: #323232;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    font-size: 42px;
+    line-height: 100px;
+    padding-left: 10px;
+    color: white;
+    z-index: 99;
+    -moz-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+.video-arrow {
+    width: 60%;
+    margin-left: 10vw;
+}
 
 .whyAwesomeinc {
     p{
