week of code date fix

--- a/web/src/pages/bootcamp/Components/applyform.module.scss
+++ b/web/src/pages/bootcamp/Components/applyform.module.scss
@@ -6,3 +6,9 @@
 .custom-card{
     background-color: #fff !important;
 }
+// Remove arrows on phone number form
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
