fill in bootcamp testimonials

--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -131,21 +131,23 @@
     .twoButtonsRow {
         padding-top: 50px;
         padding-bottom: 50px;
-
+        margin-left: auto;
+        margin-right: auto;
         .leftButtonCol{
             padding-right: 50px;
             border-right: 1.75px solid white;
-            @include screen-sm{
+            @include screen-xs{
               border-right: none;
-              padding-right: none;
+              padding-right: 0;
+              padding-left: 0;
             }
         }
     
         .rightButtonCol{
             padding-left: 50px;
-            @include screen-sm{
-                padding-left:none;
-                padding-right: none;
+            @include screen-xs{
+                padding-left: 0;
+                padding-right: 0;
             }
             
         }
