--- a/web/src/pages/bootcamp/Components/AlumniTestimonials/AlumniTestimonials.module.scss
+++ b/web/src/pages/bootcamp/Components/AlumniTestimonials/AlumniTestimonials.module.scss
@@ -3,10 +3,14 @@
 
 .portrait {
     border-radius: 8px; 
-    max-width: 100%; 
-    max-height: auto;
+    max-width: 250px;
+    max-height: 300px;
 }
 
 .testimony {
     text-align: center !important; 
+    @media(max-width: 425px){
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
