--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -414,10 +414,7 @@
 }
 
 .languages {
-    background-image: url(../../images/bootcamp/languages-bg.jpg);
-    background-position: center;
-    background-repeat: none;
-    background-position: 79% 21%;
+    background-color: #e6e7e8;
     width: 100%;
     padding-left: 100px;
     padding-right: 100px;
