--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -43,3 +43,33 @@ p {
 a {
   font-weight: 400;
 }
+@media (max-width: 767px) {
+  
+  /* Adjust heading sizes for smaller screens */
+  h1 {
+      font-size: 1.6em;
+  }
+  
+  h2 {
+      font-size: 1.4em;
+  }
+  
+  h3 {
+      font-size: 1.2em;
+  }
+  
+  h4 {
+      font-size: 1em;
+  }
+  
+  h5 {
+      font-size: 0.8em;
+  }
+  
+  h6 {
+      font-size: 0.75em;
+  }
+  p{
+    font-size: 0.6em;
+  }
+}
