side nav update

--- a/web/src/pages/bootcamp/Components/sideNav.module.scss
+++ b/web/src/pages/bootcamp/Components/sideNav.module.scss
@@ -11,8 +11,7 @@
     margin-top: -6rem;
     z-index: 999;
     max-width: 250px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+    border-radius: 8px;
     transition: right 0.3s ease; /* Smooth transition */
 
     nav {
@@ -28,5 +27,5 @@
     }
 }
 .show {
-    right: 0; /* Bring it into view */
+    right: 10px; /* Bring it into view */
 }
