--- a/web/src/pages/internships/Components/teaminfo.scss
+++ b/web/src/pages/internships/Components/teaminfo.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+@import '../../../styles/mixins';
 .modal-dialog {
   @media (max-width: 767px) {
       max-width: 75% !important; /* Adjust the width for medium-sized screens */
@@ -6,5 +8,11 @@
   
   @media (min-width: 768px) {
       max-width: 750px !important; /* Adjust the width for large screens */
+  }
+}
+
+.link{
+  @include screen-xs{
+    font-size: 16px;
   }
 }
