--- a/web/src/styles/card.scss
+++ b/web/src/styles/card.scss
@@ -14,6 +14,10 @@
 .card--square-size {
   width: 114px;
   height: 114px;
+  @include screen-xs {
+    height: 100px;
+    width: 100px;
+}
 }
 
 .card__img--overlay {
