--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -10,21 +10,13 @@
     position: relative;
     background-position:center 20%;
     min-width:100%;
-    height: 65vh;
+    height: 70vh;
     @include screen-lg {
         background-position: 40%;
     }
     @include screen-md {
         height: 75vh;
 
-    }
-    @include screen-sm {
-        line-height: 1rem;
-        // background-image:none;
-    }
-    @include screen-xs {
-        height: 700px;
-        background-size: cover;    
     }
 }
 
@@ -131,9 +123,8 @@
         margin-top: 20%;
     }
     @include screen-sm {
-        line-height: 1.2rem;
-        margin-top: 260px;
-        color: black;
+        line-height: .9rem;
+        width: 65%;
     }
     @include screen-xs {
         color: white;
