--- a/web/src/pages/alumni/alumni.scss
+++ b/web/src/pages/alumni/alumni.scss
@@ -63,15 +63,22 @@
   width: 250px;
   height: 250px;
     
-  position: absolute;
-  bottom: -20px;
-  left: 21%;
-
+  @media(max-width:  2560px){
+    position: absolute;
+    bottom: -20px;
+    left: 21%;
+  }
   @media (max-width: 1400px) {
     left: 20%;
+    position: absolute;
+    bottom: -20px;
+
   }
   @media (max-width: 1200px) {
     left: 17%;
+    position: absolute;
+    bottom: -20px;
+
   }
   @media (max-width: 990px) {
     display: none;
