--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -121,9 +121,10 @@
 }
 
 .bootcampUpcomingdates{
+    /*
     @media (min-width: 768px){
         border-right: 2px solid #C12029;
-    }
+    }*/
 }
 
 .twoButtons{
