--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -528,3 +528,13 @@
     margin: 0px auto;
     margin-top: 40px;
 }
+
+.modalLogoDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo{
+    max-width: 30%;
+}
