--- a/web/src/components/Event/events.module.scss
+++ b/web/src/components/Event/events.module.scss
@@ -14,22 +14,6 @@
     border-color: rgba(119, 119, 119, 0.353);
     border-width: 1px;
     border-style: solid;
-    @include screen-xs{
-        width: 75vw;
-        height: 60vh;
-    }
-    @include screen-md{
-        width: 45vw;
-        height: 40vh;
-    }
-    @include screen-lg {
-        width: 32vw;
-        height: 40vh;
-    }
-    @include screen-max{
-        width: 27vw;
-        height: 24vh;
-    }
 }
 
 .box:hover {
@@ -38,10 +22,14 @@
 }
 
 .event-image {
-    float: left;
     object-fit: contain;
     max-width: 125px;
     transition-duration: 400ms;
+    display: flex;
+    align-items: center;
+    @media (max-width: 510px) {
+        display: none;
+    }
 }
 
 .box:hover .event-image{
