--- a/web/src/pages/events/events.module.css
+++ b/web/src/pages/events/events.module.css
@@ -27,3 +27,21 @@
     /* margin: 0px 15px 0px 40px; */
     color: white;
 }
+
+@media (max-width: 992px) {
+    .noHorizontalSpacing {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .noHorizontalSpacing {
+        padding-left: 3rem !important;
+        padding-right: 3rem !important;
+        margin-left: 3rem !important;
+        margin-right: 3rem !important;
+    }
+}
