--- a/web/src/pages/events/events.module.scss
+++ b/web/src/pages/events/events.module.scss
@@ -1,4 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
+@import '../../styles/variables.scss';
+@import '../../styles/mixins';
 
 * {
     font-family: "Open Sans", sans-serif;
@@ -19,11 +21,51 @@
     /* border: 1px solid #eee; */
     /* border-radius: 2px; */
     /* margin: 10px 10px 50px 160px */
-    margin: auto
+    margin: auto;
 }
 
 .flex-item {
     /* width: 500px; */
     /* margin: 0px 15px 0px 40px; */
     color: white;
+}
+
+.container{
+    margin-bottom: 50px;
+}
+
+
+.row {
+  width: 100%;
+}
+
+.column {
+  padding-left: 15px;
+  padding-right: 15px;
+  box-sizing: inherit;
+
+  @include screen-xs {
+    width: 100%;
+    min-height: 170px;
+  }
+
+  @include screen-sm {
+      width: 100%;
+      min-height: 170px;
+  }
+
+  @include screen-md {
+    width: 50%;
+    min-height: 160px;
+  }
+
+  @include screen-lg {
+    width: 50%;
+    min-height: 160px;
+  }
+
+  @include screen-max {
+    width: 50%;
+    min-height: 160px;
+  }
 }
