--- a/web/src/components/DivOutline/DivOutline.module.scss
+++ b/web/src/components/DivOutline/DivOutline.module.scss
@@ -2,29 +2,31 @@
 @import "../../styles/mixins.scss";
 
 .border {
-  flex: 1 1 25%;
-  border: solid #ed3742 1px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ed3742;
   min-height: 300px;
-  max-height: 300px;
   margin-bottom: 5rem;
+  position: relative;
 }
 
 .subHeading {
   background-color: #fff;
   width: min-content;
+  height: 1rem;
   padding: 0px 12px;
-  position: relative;
-  left: 50%;
+  position: absolute;
   top: -15px;
-  transform: translateX(-50%);
   line-height: 30px;
-  @include font-size(12)
+  @include font-size(12);
 }
 
 .content {
   font-size: 15px;
-  padding: 2.5rem 2rem;
+  padding: 2.5rem 2.7rem;
+  position: relative;
   margin-left: auto;
   margin-right: auto;
   text-align: start;
@@ -61,6 +63,9 @@
 }
 
 @media (max-width: 1200px) {
+  .border {
+    min-height: 350px;
+  }
   .subHeading {
     font-size: 20px;
   }
@@ -72,5 +77,8 @@
   }
   .border {
     max-height: fit-content;
+  }
+  .subHeading {
+    top: -18px;
   }
 }
