--- a/web/src/pages/about/about.module.css
+++ b/web/src/pages/about/about.module.css
@@ -1,4 +1,17 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
+@import url(
+  https://fonts.googleapis.com/css?family=Open+Sans:300,
+  regular,
+  500,
+  600,
+  700,
+  800,
+  300italic,
+  italic,
+  500italic,
+  600italic,
+  700italic,
+  800italic
+);
 
 * {
   font-family: "Open Sans", sans-serif;
