--- a/web/src/pages/events/events.module.scss
+++ b/web/src/pages/events/events.module.scss
@@ -1,88 +1,58 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
-@import '../../styles/variables.scss';
-@import '../../styles/mixins';
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic");
+@import "../../styles/variables.scss";
+@import "../../styles/mixins";
 
 * {
-    font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .heading-subtitle {
-    font-family: "Open Sans",sans-serif;
-    font-size: 17px;
-    /* letter-  spacing: -.1px; */
-    /* margin-bottom: 3rem; */
-    margin-top: .5rem;
+  font-family: "Open Sans", sans-serif;
+  font-size: 17px;
+  margin-top: 0.5rem;
 }
 
 .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: row; */
-    /* border: 1px solid #eee; */
-    /* border-radius: 2px; */
-    /* margin: 10px 10px 50px 160px */
-    margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
 }
 
 .flex-item {
-    /* width: 500px; */
-    /* margin: 0px 15px 0px 40px; */
-    color: white;
-}
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  padding: 15px;
 
-.container{
-    margin-bottom: 50px;
-}
-
-
-.row {
-  width: 100%;
-}
-
-.column {
-  padding-left: 15px;
-  padding-right: 15px;
-  box-sizing: inherit;
-
-  @include screen-xs {
-    width: 100%;
-    min-height: 170px;
+  @media (min-width: 768px) {
+    flex: 1 1 50%;
   }
 
-  @include screen-sm {
-      width: 100%;
-      min-height: 170px;
-  }
-
-  @include screen-md {
-    width: 50%;
-    min-height: 160px;
-  }
-
-  @include screen-lg {
-    width: 50%;
-    min-height: 160px;
-  }
-
-  @include screen-max {
-    width: 50%;
-    min-height: 160px;
+  @media (min-width: 992px) {
+    flex: 1 1 33.333%;
   }
 }
+
+.custom-container {
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+}
+
 @media (max-width: 992px) {
-    .noHorizontalSpacing {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-        margin-left: 0 !important;
-        margin-right: 0 !important;
-    }
+  .noHorizontalSpacing {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 }
 
 @media (min-width: 992px) {
-    .noHorizontalSpacing {
-        padding-left: 3rem !important;
-        padding-right: 3rem !important;
-        margin-left: 3rem !important;
-        margin-right: 3rem !important;
-    }
+  .noHorizontalSpacing {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+    margin-left: 3rem !important;
+    margin-right: 3rem !important;
+  }
 }
