updated the css to run after mount

--- a/web/src/components/Header/header.scss
+++ b/web/src/components/Header/header.scss
@@ -1,5 +1,5 @@
-@import '../../styles/variables.scss';
-@import '../../styles/mixins.scss';
+@import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
 
 .desktop {
   display: block;
@@ -56,35 +56,43 @@
   background-color: $brand-color2;
   opacity: 0.9;
   z-index: 999;
-  @media(max-width: 768px){
+  @media (max-width: 768px) {
     --bs-navbar-padding-y: 0rem;
   }
   .sub-navbar {
     padding-top: 2%;
     padding-bottom: 0%;
   }
+
+  &.animate > .container {
+    -webkit-animation-name: fadeInRight;
+    animation-name: fadeInRight;
+    animation-duration: 600ms;
+    animation-timing-function: ease-in;
+  }
 }
 
 .navbar > .container {
-  -webkit-animation-name: fadeInRight;
-  animation-name: fadeInRight;
+  /* Commented out the animation properties to prevent initial animation */
+  /* -webkit-animation-name: fadeInRight; */
+  /* animation-name: fadeInRight; */
+  /* animation-duration: 600ms; */
+  /* animation-timing-function: ease-in; */
+
   -webkit-transform-origin: center;
   transform-origin: center;
-  animation-duration: 600ms;
-  animation-timing-function: ease-in;
 
   line-height: 1rem;
 
-  >.navbar-collapse > .navbar-nav > .row {
-
+  > .navbar-collapse > .navbar-nav > .row {
     .dropdown {
       display: flex;
-        flex-direction: column;
-        margin-left: auto;
-        width: 50px;
-        >button {
-          border: none;
-        }
+      flex-direction: column;
+      margin-left: auto;
+      width: 50px;
+      > button {
+        border: none;
+      }
     }
 
     a {
@@ -95,17 +103,17 @@
         color: $brand-color;
       }
     }
-  
+
     > div {
-      div a{          
+      div a {
         @include font-size(7);
         &:hover {
           padding: 0px 20px;
           color: $brand-color;
-        }  
+        }
       }
-      
-      &:hover > .nav-link{
+
+      &:hover > .nav-link {
         color: $brand-color;
       }
       @include screen-tablet-max {
@@ -129,7 +137,7 @@
           @include font-size(7);
           &:hover {
             color: $brand-color;
-          }  
+          }
         }
       }
     }
@@ -151,7 +159,7 @@
     border-radius: 2px;
     height: 40px;
     width: 50px;
-    
+
     &:active {
       background-color: $brand-color;
       border: 1px solid $brand-color;
@@ -165,9 +173,7 @@
   }
 }
 
-
 /*Animation*/
-
 
 @keyframes fadeInRight {
   from {
@@ -190,8 +196,8 @@
   to {
     opacity: 1;
   }
- }
- .dropdown-menu {
+}
+.dropdown-menu {
   min-width: auto !important;
   font-size: 12px;
 }
@@ -199,4 +205,3 @@
 #lang-nav-dropdown {
   width: fit-content;
 }
-
