--- a/web/src/components/Header/header.scss
+++ b/web/src/components/Header/header.scss
@@ -54,23 +54,25 @@
 
 .navbar {
   background-color: $brand-color2;
-  opacity: 0;
-  transition: opacity 0s ease-in;
+  opacity: 0.9;
   z-index: 999;
-
   @media (max-width: 768px) {
     --bs-navbar-padding-y: 0rem;
   }
-
   .sub-navbar {
     padding-top: 2%;
     padding-bottom: 0%;
   }
 }
 
-.navbar.animate {
-  opacity: 1;
+.navbar-contents {
+  opacity: 0;
   transition: opacity 0.6s ease-in;
+}
+
+/* When animate class is added, show and animate contents */
+.navbar.animate .navbar-contents {
+  opacity: 1;
   -webkit-animation-name: fadeInRight;
   animation-name: fadeInRight;
   animation-duration: 600ms;
@@ -78,12 +80,6 @@
 }
 
 .navbar > .container {
-  /* Commented out the animation properties to prevent initial animation */
-  /* -webkit-animation-name: fadeInRight; */
-  /* animation-name: fadeInRight; */
-  /* animation-duration: 600ms; */
-  /* animation-timing-function: ease-in; */
-
   -webkit-transform-origin: center;
   transform-origin: center;
 
