--- a/web/src/pages/events/5across/fiveAcross.module.scss
+++ b/web/src/pages/events/5across/fiveAcross.module.scss
@@ -126,3 +126,35 @@
         display: 'inline-block';
     }
 }
+
+.past-winner-card-container {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.past-winner-img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.img-container {
+    height: 300px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.video-button {
+  padding: 0;
+}
