--- a/web/src/pages/events/events.module.scss
+++ b/web/src/pages/events/events.module.scss
@@ -39,6 +39,14 @@
   padding: 0 15px;
 }
 
+.noEventsMessage {
+  text-align: center;
+  margin: 50px auto;
+  font-size: 1.2rem;
+  color: #323232;
+  font-weight: bold;
+}
+
 @media (max-width: 992px) {
   .noHorizontalSpacing {
     padding-left: 0 !important;
