updated secondary button

--- a/web/src/styles/mixins.scss
+++ b/web/src/styles/mixins.scss
@@ -16,6 +16,7 @@
   border: 2px solid $bg-color;
   border-radius: 4px;
   padding: 0.5rem 2rem;
+  font-size: 1rem;
   font-family: $heading-font;
   font-weight: 600;
   letter-spacing: 3px;
